@@ -1,45 +1,44 @@
 package io.bootify.helisys.service;
 
-import io.bootify.helisys.domain.Aeronave;
-import io.bootify.helisys.domain.ModeloAeronave;
-import io.bootify.helisys.domain.Producto;
+import io.bootify.helisys.domain.*;
 import io.bootify.helisys.model.ModeloAeronaveDTO;
-import io.bootify.helisys.repos.AeronaveRepository;
-import io.bootify.helisys.repos.ModeloAeronaveRepository;
-import io.bootify.helisys.repos.ProductoRepository;
+import io.bootify.helisys.repos.*;
 import io.bootify.helisys.util.NotFoundException;
 import io.bootify.helisys.util.ReferencedWarning;
-import java.util.List;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.util.List;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 public class ModeloAeronaveService {
 
     private final ModeloAeronaveRepository modeloAeronaveRepository;
     private final AeronaveRepository aeronaveRepository;
-    private final ProductoRepository productoRepository;
+    private final DetalleProductoModeloAeronaveRepository detalleProductoModeloAeronaveRepository; // Nuevo repositorio
 
-    public ModeloAeronaveService(final ModeloAeronaveRepository modeloAeronaveRepository,
-            final AeronaveRepository aeronaveRepository,
-            final ProductoRepository productoRepository) {
+    public ModeloAeronaveService(
+        final ModeloAeronaveRepository modeloAeronaveRepository,
+        final AeronaveRepository aeronaveRepository,
+        final DetalleProductoModeloAeronaveRepository detalleProductoModeloAeronaveRepository) { // Inyectamos el nuevo repositorio
         this.modeloAeronaveRepository = modeloAeronaveRepository;
         this.aeronaveRepository = aeronaveRepository;
-        this.productoRepository = productoRepository;
+        this.detalleProductoModeloAeronaveRepository = detalleProductoModeloAeronaveRepository;
     }
 
     public List<ModeloAeronaveDTO> findAll() {
         final List<ModeloAeronave> modeloAeronaves = modeloAeronaveRepository.findAll(Sort.by("mreId"));
         return modeloAeronaves.stream()
-                .map(modeloAeronave -> mapToDTO(modeloAeronave, new ModeloAeronaveDTO()))
-                .toList();
+            .map(modeloAeronave -> mapToDTO(modeloAeronave, new ModeloAeronaveDTO()))
+            .collect(Collectors.toList());
     }
 
     public ModeloAeronaveDTO get(final Integer mreId) {
         return modeloAeronaveRepository.findById(mreId)
-                .map(modeloAeronave -> mapToDTO(modeloAeronave, new ModeloAeronaveDTO()))
-                .orElseThrow(NotFoundException::new);
+            .map(modeloAeronave -> mapToDTO(modeloAeronave, new ModeloAeronaveDTO()))
+            .orElseThrow(NotFoundException::new);
     }
 
     public Integer create(final ModeloAeronaveDTO modeloAeronaveDTO) {
@@ -50,7 +49,7 @@ public class ModeloAeronaveService {
 
     public void update(final Integer mreId, final ModeloAeronaveDTO modeloAeronaveDTO) {
         final ModeloAeronave modeloAeronave = modeloAeronaveRepository.findById(mreId)
-                .orElseThrow(NotFoundException::new);
+            .orElseThrow(NotFoundException::new);
         mapToEntity(modeloAeronaveDTO, modeloAeronave);
         modeloAeronaveRepository.save(modeloAeronave);
     }
@@ -59,15 +58,13 @@ public class ModeloAeronaveService {
         modeloAeronaveRepository.deleteById(mreId);
     }
 
-    private ModeloAeronaveDTO mapToDTO(final ModeloAeronave modeloAeronave,
-            final ModeloAeronaveDTO modeloAeronaveDTO) {
+    private ModeloAeronaveDTO mapToDTO(final ModeloAeronave modeloAeronave, final ModeloAeronaveDTO modeloAeronaveDTO) {
         modeloAeronaveDTO.setMreId(modeloAeronave.getMreId());
         modeloAeronaveDTO.setMreNombre(modeloAeronave.getMreNombre());
         return modeloAeronaveDTO;
     }
 
-    private ModeloAeronave mapToEntity(final ModeloAeronaveDTO modeloAeronaveDTO,
-            final ModeloAeronave modeloAeronave) {
+    private ModeloAeronave mapToEntity(final ModeloAeronaveDTO modeloAeronaveDTO, final ModeloAeronave modeloAeronave) {
         modeloAeronave.setMreNombre(modeloAeronaveDTO.getMreNombre());
         return modeloAeronave;
     }
@@ -75,20 +72,33 @@ public class ModeloAeronaveService {
     public ReferencedWarning getReferencedWarning(final Integer mreId) {
         final ReferencedWarning referencedWarning = new ReferencedWarning();
         final ModeloAeronave modeloAeronave = modeloAeronaveRepository.findById(mreId)
-                .orElseThrow(NotFoundException::new);
+            .orElseThrow(NotFoundException::new);
         final Aeronave anvMreAeronave = aeronaveRepository.findFirstByAnvMre(modeloAeronave);
         if (anvMreAeronave != null) {
             referencedWarning.setKey("modeloAeronave.aeronave.anvMre.referenced");
             referencedWarning.addParam(anvMreAeronave.getAnvId());
             return referencedWarning;
         }
-        final Producto proMreProducto = productoRepository.findFirstByProMre(modeloAeronave);
-        if (proMreProducto != null) {
-            referencedWarning.setKey("modeloAeronave.producto.proMre.referenced");
-            referencedWarning.addParam(proMreProducto.getProId());
+        final DetalleProductoModeloAeronave dpmaMreDetalle = detalleProductoModeloAeronaveRepository.findFirstByDpmaMre(modeloAeronave);
+        if (dpmaMreDetalle != null) {
+            referencedWarning.setKey("modeloAeronave.detalleProductoModeloAeronave.dpmaMre.referenced");
+            referencedWarning.addParam(dpmaMreDetalle.getDpmaId());
             return referencedWarning;
         }
         return null;
     }
 
+
+    public void relacionarModelos(Producto producto, Set<Integer> modeloIds) {
+        if (modeloIds != null) {
+            modeloIds.stream().distinct().forEach(id -> {
+                ModeloAeronave modelo = modeloAeronaveRepository.findById(id)
+                    .orElseThrow(() -> new RuntimeException("ModeloAeronave con ID " + id + " no encontrado"));
+                DetalleProductoModeloAeronave detalle = new DetalleProductoModeloAeronave();
+                detalle.setDpmaPro(producto);
+                detalle.setDpmaMre(modelo);
+                detalleProductoModeloAeronaveRepository.save(detalle);
+            });
+        }
+    }
 }
